--- a/src/app/course/test/components/CourseTag.css
+++ b/src/app/course/test/components/CourseTag.css
@@ -1,85 +1,33 @@
-.course-tag{
+.course-tag {
+  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1rem 0;
-box-shadow: rgb(0, 0, 0);
-background: var(--off-white);
-  
-}
-.course-tag-desktop,
-.course-tag-mobile {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 1rem 0;
-  hr{
-    width: 80%;
-    margin: 1rem 0;
-  }
-  a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 0.8rem;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 50px;
-    cursor: pointer;
-    height: 1.5rem;
-    width: 3rem;
-    background-color: var(--blue);
-    color: white;
-    transition: all 0.2s ease-in-out;
-    padding: 0;
-  }
-  a:hover {
-    background-color: var(--dark-blue);
-   
-}
-
-}
-.course-tag-mobile {
-  display: none;
-}
-.course-name {
- 
-  display: flex;
-  flex-direction: column;
-  width: 80vw;
-  justify-self: center;
-  justify-content: center;
-
-  text-align: left;
+  overflow: hidden;
+  color: white;
+  background: var(--off-white);
   height: auto;
-  color: var(--dark-gray);
+  padding: 2rem 0;
+  border: var(--gray);
   
-}
-.tag {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
-@media screen and (max-width: 1000px) {
-  .tag {
-    flex-direction: row;
-    justify-self: center;
-    width: 80vw;
+
+  h1 {
+    line-height: 1;
+   
   }
-  .course-name{
-    text-align: center;
+
+  p {
+    line-height: 1.4;
+
+   
+  }
+  hr {
+    border: 1px solid #ccc;
+    margin: 0.2rem;
+    width: 80%;
+  }
 }
-  .course-tag-desktop {
-    display: none;
-  }
-  .course-tag-mobile {
-    display: block;
-    hr{
-      width: 100%;
-     
-    }
-  }
+.course-price hr{
+  width: 100%;
 }
