--- a/src/app/components/Slider.css
+++ b/src/app/components/Slider.css
@@ -6,7 +6,7 @@ html, body {
 .sliderComponent {
   
   position: relative;
-  height: 60vh;
+  height: auto;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -21,16 +21,18 @@ html, body {
   display: flex;
   scroll-snap-type: x mandatory; /* Enable snapping for smooth UX */
   overflow-x: auto;
+  align-items: center;
   width: 100%;
-  height: 60vh;
+  height: 100%;
   gap: 0; /* No gaps between slides */
   object-fit: cover;
   scrollbar-width: none;
 }
 
 .sliderComponent .slide {
-
-  height: auto;
+  border-radius: 10px;
+  margin: 0 5px 10px 5px;
+  height: 50vh;
   position: relative;
   flex: 0 0 33.33%;
   display: flex;
@@ -133,7 +135,7 @@ html, body {
   border: none;
   cursor: pointer;
   width: 10vw;
-  height: 60vh;
+  height: 50vh;
   font-size: 1.5rem;
   transition: transform 0.2s ease-in-out;
   z-index: 2;
