--- a/src/app/home/Parts/Description.css
+++ b/src/app/home/Parts/Description.css
@@ -28,7 +28,28 @@
 
     }
 }
-
+.des-text-wrap{
+    width: 80%;
+    a{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-decoration: none;
+        color: white;
+        background-color: var(--blue);
+        border-radius: 40px;
+        justify-self: center;
+        margin: 1rem;
+        width: 4rem;
+        height: 1.6rem;
+        padding: 0 20px;
+        font-size: 0.8rem;
+        font-weight: 300;
+        transition: 0.2s;
+        
+      }
+}
 .des-overlay {
     position: absolute;
     color: rgb(255, 255, 255);
