--- a/src/app/home/Parts/Post.css
+++ b/src/app/home/Parts/Post.css
@@ -13,7 +13,7 @@
 
 .post-item {
   width: 100%; /* Ensure each item takes up full width of the parent */
-  margin-bottom: 4px; /* Add space between items */
+  margin-bottom: 8px; /* Add space between items */
   position: relative; /* To position the overlay on top of the image */
   display: flex;
   flex-direction: column;
@@ -21,19 +21,51 @@
   align-items: center;
 }
 .post-text-panel {
-  background-color: var(--off-white);
+  background-color: var(--gray);
+  color: white;
   z-index: 2;
   height: auto;
-  padding:  0rem 2rem;
+  height: auto;
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr ; 
+
+  
 }
 .post-text {
-  font-size: 0.6rem;
-  p{
-    font-size: 0.6rem;
+  position: absolute;
+  bottom: 0;
+  opacity: 0; /* Make it invisible */
+  visibility: hidden; /* Ensure it is not interactable */
+  transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+  font-size: 2rem;
+  width: 100%;
+  text-align: center;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  z-index: 2;
+  h3{
+    font-size: 1rem;
   }
+}
+.post-text::after{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.5) 0%,
+    rgba(0, 0, 0, 0) 80%
+  );
+  pointer-events: none;
+  z-index: -1;
+}
+.post-text.visible {
+  opacity: 1; /* Make it visible */
+  visibility: visible; /* Ensure it becomes interactable */
 }
 .post-item::after {
   content: "";
@@ -44,7 +76,7 @@
   bottom: 0;
   background: linear-gradient(
     to bottom,
-    rgba(0, 0, 0, 0.8) 0%,
+    rgba(0, 0, 0, 0.9) 0%,
     rgba(0, 0, 0, 0) 50%
   );
   pointer-events: none;
