--- a/src/app/components/Slider.css
+++ b/src/app/components/Slider.css
@@ -32,13 +32,15 @@ body {
 .sliderComponent .slide {
   height: 50vh;
   position: relative;
-  flex: 0 0 33.33%;
+  flex: 0 0 30vw;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
   z-index: 2;
   transition: 0.4s ease;
+  margin: 24px 12px;
+  border-radius: 10px;
 }
 .sliderComponent .slide:hover {
   transform: scale(1);
@@ -162,12 +164,7 @@ body {
     rgba(0, 0, 0, 0) 80%
   );
 }
-@media screen and (min-width: 1000px) {
-  .sliderComponent .slide {
-    margin: 10px 5px;
-    border-radius: 10px;
-  }
-}
+
 @media screen and (max-width: 1400px) {
   .sliderComponent {
     height: auto;
@@ -191,5 +188,6 @@ body {
   }
   .sliderComponent .slide {
     flex: 0 0 100%;
+    margin: 0;
   }
 }
