--- a/src/app/gallery/Gallery.css
+++ b/src/app/gallery/Gallery.css
@@ -2,5 +2,5 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: var(--off-white);
+    background-color: var(--dark-gray);
 }
