--- a/src/app/gallery/components/Gallery.css
+++ b/src/app/gallery/components/Gallery.css
@@ -6,14 +6,19 @@
     flex-direction: column;
     align-items: center;
     background-color: var(--off-white);
-    padding-top:2rem;
-    height: 100vh;
+    color: white;
+    height: auto;
     align-items: center;
-    justify-content: end;
+    justify-content: start;
+    padding-bottom: 12vh;
+    video{
+        height: 60vh;
+        width: 100%;
+        object-fit: cover;
+    }
 }
-.gallery-text{
-    margin: 2rem;
-}
-.gallery-slider #gallery-slider .sliderComponent{
-    height: 10vh;
-}
+/* .gallery-text{
+    text-align: center;
+    background-color: var(--gray);
+    width: 100%;
+} */
