--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,7 @@
   --off-white: #faf3f1;
   --red: #dc4a44;
   --gray: #323232;
+  --dark-gray: #111111;
   --light-gray: #646464;
   --blue-transparent: rgba(127, 127, 127, 0.5);
   font-size: clamp(1.5rem, 2vw, 3rem);
