--- a/src/app/home/Parts/Description.css
+++ b/src/app/home/Parts/Description.css
@@ -29,7 +29,7 @@
     }
 }
 .des-text-wrap{
-    width: 92%;
+    width: 60%;
 
     display: flex;
     flex-direction: column;
@@ -104,5 +104,8 @@
 
     .des-overlay {
         width: 80%;
+    }
+    .des-text-wrap{
+        width: 92%;
     }
 }
