--- a/src/app/components/Slider.css
+++ b/src/app/components/Slider.css
@@ -30,7 +30,7 @@ body {
 }
 
 .sliderComponent .slide {
-  height: 50vh;
+  height: 40vh;
   position: relative;
   flex: 0 0 30vw;
   display: flex;
@@ -106,13 +106,14 @@ body {
   padding: 10px;
   text-align: center;
   z-index: 2;
-  h1 {
-    font-size: 48px;
+  
+  h2 {
+    font-size: 1rem;
     line-height: 1.3;
     font-weight: 600;
   }
   p {
-    font-size: 24px;
+    font-size: 0.6rem;
     line-height: 1;
     font-weight: 200;
     letter-spacing: -0.02em;
@@ -126,6 +127,7 @@ body {
     text-align: left;
     color: white;
     background-color: transparent;
+
   }
 }
 .play {
@@ -189,5 +191,6 @@ body {
   .sliderComponent .slide {
     flex: 0 0 100%;
     margin: 0;
+    margin-bottom: 10px;
   }
 }
